Fixed a few issues

--- a/button/nav-buttons/nav-buttons.css
+++ b/button/nav-buttons/nav-buttons.css
@@ -46,9 +46,9 @@ table {
   box-sizing: border-box;
 }
 
-/**************************/
-/*** Flat Button Styles ***/
-/**************************/
+/*************************/
+/*** Nav Button Styles ***/
+/*************************/
 body {
   padding: 50px;
   text-align: center;
